objects/Super_Center_Member__c.object
<CustomObject>
    <description>These are members, either users or contacts, that perform work in the context of the associated super center.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact associated to this Super Center Team Member (especially used with outside vendors)</description>
        <inlineHelpText>The Contact associated to this Super Center Team Member (especially used with outside vendors)</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Super Center Members</relationshipLabel>
        <relationshipName>Super_Center_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>This is the role of the Super Center Team Member it is populated based on the User Role or Contact</description>
        <inlineHelpText>This is the role of the Super Center Team Member it is populated based on the User Role or Contact</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Service Coordinator</fullName>
                </value>
                <value>
                    <fullName>Outside Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Segment this team member is a part of.</description>
        <inlineHelpText>The Segment this team member is a part of.</inlineHelpText>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Super Center Members</relationshipLabel>
        <relationshipName>Super_Center_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_Center__c</fullName>
        <description>The Super Center this Super Center Member belongs to</description>
        <inlineHelpText>The Super Center this Super Center Member belongs to</inlineHelpText>
        <label>Super Center</label>
        <referenceTo>Super_Center__c</referenceTo>
        <relationshipLabel>Super Center Members</relationshipLabel>
        <relationshipName>Super_Center_Members_del</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of member it is. Is it an employee or outside vendor?</description>
        <inlineHelpText>The type of member it is. Is it an employee or outside vendor?</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Outside Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User that represents this Super Center Team Member (Optional)</description>
        <inlineHelpText>The User that represents this Super Center Team Member (Optional)</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Super_Center_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Super Center Member</label>
    <nameField>
        <label>Super Center Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Super Center Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>